<resources>
    <string name="app_name">Track &amp; Hack</string>
    <string name="action_settings">Settings</string>

    <!-- Titles-->
    <string name="title_activity_gift_card">Gift Card</string>
    <string name="title_activity_min_spend">Minimum Spend</string>
    <string name="title_activity_new_gift_card">Add New Gift Card</string>
    <string name="title_activity_new_mind_spend">Add New Minimum Spend</string>
    <string name="title_activity_edit_mind_spend">Edit Minimum Spend</string>
    <string name="title_activity_edit_gift_card">Edit Gift Card</string>

    <!-- Main Menu-->
    <string name="menu.new_gift_card">Gift Card</string>
    <string name="menu.new_min_spend">Min Spend</string>
    <string name="menu.add_new">Add New:</string>
    <string name="title_activity_main_nav_drawer">MainNavDrawer</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="main_show_close_label">Closed</string>
    <string name="main_show_close_off">Hide</string>
    <string name="main_show_close_on">Show</string>

    <!-- Field Strings -->
    <string name="goal_title">Title</string>
    <string name="goal_start">Start</string>
    <string name="goal_end">End</string>
    <string name="goal_amount">Amount</string>
    <string name="goal_currentAmount">Current</string>
    <string name="goal_bonus">Bonus</string>
    <string name="goal_type">Type</string>
    <string name="goal_notes">Notes</string>


    <!-- Activity -->
    <string name="history">History</string>
    <string name="notes">Notes</string>
    <string name="close">Close</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <!-- Gift Card -->
    <string name="gc_close">Zero Out and Close</string>
    <string name="gc_adj">Adjust</string>
    <string name="gc_edit_card">Edit Card</string>

    <!-- Min Spend -->
    <string name="min_close">Max Out and Close</string>
    <string name="min_adj">Adjust</string>

    <!-- History -->
    <string name="history_date_label">Date</string>
    <string name="history_amount_label">Amount</string>
    <string name="history_notes_label">Notes</string>
    <string name="pending_adjustment_popup_title">Adjustment Pending</string>
    <string name="pending_adjustment_popup_body">This adjustment is pending, it can not be edited</string>


</resources>
