<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_show_close_label"
            android:id="@+id/closedSwitch"
            android:checked="false"
            android:textOff="@string/main_show_close_off"
            android:textOn="@string/main_show_close_on"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <ExpandableListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/groupList"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:drawSelectorOnTop="true" />
</LinearLayout>
