<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="trackandhack.trackandhackprototype_2.Activity.NewGiftCardActivity">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:background="@drawable/rectangle"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"></RelativeLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:id="@+id/textView"
                            android:text="@string/goal_title"
                            android:layout_marginLeft="20dp" />

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/titleInput"
                            android:layout_below="@+id/textView"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp" />
                    </RelativeLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:id="@+id/startDateLabel"
                                android:layout_marginLeft="20dp"
                                android:text="@string/goal_start" />

                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/startDateLabel">

                                <EditText
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/startDateInput"
                                    android:inputType="date"
                                    android:layout_below="@+id/startDateLabel"
                                    android:layout_weight="1"
                                    android:layout_marginLeft="20dp"
                                    android:textSize="14dp" />

                                <ImageButton
                                    android:layout_width="wrap_content"
                                    android:layout_height="fill_parent"
                                    android:id="@+id/startDateButton"
                                    android:layout_toRightOf="@+id/startDateInput"
                                    android:layout_below="@+id/startDateLabel"
                                    android:background="@drawable/ic_today_white_48dp"
                                    android:scaleType="fitCenter"
                                    android:layout_weight="1"
                                    android:onClick="showDatePicker" />
                            </LinearLayout>

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginLeft="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/goal_end"
                                android:id="@+id/endDateLabel" />

                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/endDateLabel" >

                                <EditText
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/endDateInput"
                                    android:inputType="date"
                                    android:layout_below="@+id/endDateLabel"
                                    android:layout_weight="1"
                                    android:textSize="14dp" />

                                <ImageButton
                                    android:layout_width="wrap_content"
                                    android:layout_height="fill_parent"
                                    android:id="@+id/endDateButton"
                                    android:layout_toRightOf="@+id/editText2"
                                    android:layout_below="@+id/startDateLabel"
                                    android:background="@drawable/ic_today_white_48dp"
                                    android:scaleType="fitCenter"
                                    android:layout_weight="1"
                                    android:onClick="showDatePicker" />
                            </LinearLayout>

                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/amountLabel"
                android:text="@string/goal_amount"
                android:layout_centerHorizontal="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/amountInput"
                android:layout_below="@+id/amountLabel"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/goal_currentAmount"
                android:id="@+id/currentLabel"
                android:layout_centerHorizontal="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/currentInput"
                android:layout_below="@+id/currentLabel"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/goal_bonus"
                android:id="@+id/bonusLabel"
                android:layout_centerHorizontal="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/bonusInput"
                android:layout_below="@+id/bonusLabel"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:enabled="false" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/goal_type"
                android:id="@+id/typeLabel"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/notesLabel"
            android:text="@string/goal_notes"
            android:layout_marginLeft="20dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/notesInput"
            android:layout_below="@+id/notesLabel"
            android:lines="4"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:id="@+id/cancelButton"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_gravity="bottom" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Done"
            android:id="@+id/doneButton"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_gravity="bottom"
            android:onClick="submitMinSpend" />
    </LinearLayout>

</LinearLayout>
