<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="trackandhack.trackandhackprototype_2.Activity.GiftCardActivity">


    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tabHost"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/action_tab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="10">

                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:background="@drawable/rectangle"
                            android:layout_weight="2"
                            android:layout_marginTop="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="50dp"
                            android:layout_marginLeft="20dp"></RelativeLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:text="Title"
                                android:id="@+id/titleText"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="10dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="Digits"
                                android:id="@+id/digitsText"
                                android:layout_marginLeft="5dp" />

                            <ProgressBar
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:id="@+id/progressBar"
                                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                                android:layout_weight="1"
                                android:indeterminate="false" />

                            <RelativeLayout
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:layout_weight="1">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="?android:attr/textAppearanceMedium"
                                    android:text="00000"
                                    android:id="@+id/currentAmountText"
                                    android:layout_toLeftOf="@+id/amountDivider" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="?android:attr/textAppearanceMedium"
                                    android:text="/"
                                    android:id="@+id/amountDivider"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginLeft="5dp"
                                    android:layout_marginRight="5dp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="?android:attr/textAppearanceMedium"
                                    android:text="000000"
                                    android:layout_toRightOf="@id/amountDivider"
                                    android:id="@+id/initialAmountText" />
                            </RelativeLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="10">

                        <RelativeLayout
                            android:orientation="horizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="+        -"
                                android:id="@+id/addSubLabel"
                                android:layout_weight="1"
                                android:layout_alignParentStart="false"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentBottom="true"
                                android:layout_marginLeft="10dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="Amount"
                                android:id="@+id/adjustmentLabel"
                                android:layout_weight="1"
                                android:layout_centerHorizontal="true"
                                android:layout_alignParentBottom="true"
                                android:layout_alignParentLeft="false" />

                        </RelativeLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="1" >

                            <Switch
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/adjustmentSwitch"
                                android:textOn=""
                                android:textOff=""
                                android:checked="true"
                                android:layout_weight="2"
                                android:switchMinWidth="70dp"
                                android:layout_marginLeft="5dp" />

                            <EditText
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/adjustmentInput"
                                android:layout_weight="1"
                                android:numeric="integer|decimal"
                                android:inputType="number|numberDecimal"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp" />

                            <Button
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/gc_adj"
                                android:id="@+id/adjustmentButton"
                                android:layout_weight="2"
                                android:textSize="12dp" />
                        </LinearLayout>

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/closeButton"
                            android:text="@string/gc_close"
                            android:background="#e74c3c"
                            android:layout_centerInParent="true"
                            android:layout_marginLeft="75dp"
                            android:layout_marginRight="75dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="10"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp">

                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/notes"
                                android:id="@+id/notesLabel"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/notesText"
                                android:nestedScrollingEnabled="true"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                                android:textColor="#ffffff"
                                android:layout_below="@+id/notesLabel"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp" />
                        </RelativeLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/historyListWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ListView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:id="@+id/historyList" />
                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="10">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancelButton"
            android:layout_weight="1"
            android:layout_gravity="bottom" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/saveButton"
            android:layout_weight="1"
            android:layout_gravity="bottom" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editButton"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:text="@string/gc_edit_card" />
    </LinearLayout>

</LinearLayout>
